--- a/rockwellbank/templates/home.html
+++ b/rockwellbank/templates/home.html
@@ -24,13 +24,13 @@
     <header class="site-header" role="banner">
       <div class="topbar" aria-label="utility bar">
         <div class="topbar-inner">
-          <a class="topbar-phone" href="tel:8003825465">
+          <a class="topbar-phone" href="mail:support@metroglobaltrust.com">
             <i class="fa-solid fa-phone" aria-hidden="true"></i>
-            <span>800-382-5465</span>
+            <span>support@metroglobaltrust.com</span>
           </a>
           <nav class="utility-links" aria-label="Utility">
-            <a href="#">About Us</a>
-            <a href="#">Locations</a>
+            <a href="">Who We Are</a>
+            <a href="">Locate Us</a>
           </nav>
         </div>
       </div>
@@ -46,19 +46,19 @@
 
         <nav class="mainnav" aria-label="Primary">
           <button class="nav-link" data-mega="personal" aria-expanded="false">
-            Personal <br />
+            Individual <br />
             Banking
           </button>
           <button class="nav-link" data-mega="business" aria-expanded="false">
-            Small <br />
-            Business
+            Start Up <br />
+            Banking
           </button>
           <button class="nav-link" data-mega="commercial" aria-expanded="false">
             Commercial <br />
             &amp; Specialty
           </button>
           <button class="nav-link" data-mega="wealth" aria-expanded="false">
-            Wealth <br />
+            Capital <br />
             Management
           </button>
         </nav>
@@ -289,7 +289,7 @@
             Drive to reach your dreams.Partnership that pays off.
           </h1>
           <p class="hero-subtitle">
-            Experience powerful banking with a personal touch.
+            Empowering your finances with personalized care
           </p>
           <div class="cta-row">
             <a class="btn btn-bank-primary" href="#finder-title"
@@ -374,60 +374,60 @@
               <span
                 class="icon-mask"
                 style="
-                  -webkit-mask-image: url('assets/icons/FHB-Check.svg');
-                  mask-image: url('assets/icons/FHB-Check.svg');
+                  -webkit-mask-image: url('{% static 'assets/icons/FHB-Check.svg' %}');
+                  mask-image: url('{% static 'assets/icons/FHB-Check.svg' %}');
                 "
               ></span>
             </div>
-            <a href="#" class="help-link">Checking Accounts</a>
+            <a href="#" class="help-link">Spending Accounts</a>
           </div>
           <div class="help-card">
             <div class="help-circle">
               <span
                 class="icon-mask"
                 style="
-                  -webkit-mask-image: url('assets/icons/FHB-Piggy-bank.svg');
-                  mask-image: url('assets/icons/FHB-Piggy-bank.svg');
+                  -webkit-mask-image: url('{% static 'assets/icons/FHB-Piggy-bank.svg' %}');
+                  mask-image: url('{% static 'assets/icons/FHB-Piggy-bank.svg' %}');
                 "
               ></span>
             </div>
-            <a href="#" class="help-link">Savings Accounts</a>
+            <a href="#" class="help-link">Deposit Accounts</a>
           </div>
           <div class="help-card">
             <div class="help-circle">
               <span
                 class="icon-mask"
                 style="
-                  -webkit-mask-image: url('assets/icons/FHB-hand-w-dollar-sign-outline.svg');
-                  mask-image: url('assets/icons/FHB-hand-w-dollar-sign-outline.svg');
+                  -webkit-mask-image: url('{% static 'assets/icons/FHB-hand-w-dollar-sign-outline.svg' %}');
+                  mask-image: url('{% static 'assets/icons/FHB-hand-w-dollar-sign-outline.svg' %}');
                 "
               ></span>
             </div>
-            <a href="#" class="help-link">Loans</a>
+            <a href="#" class="help-link">Financing</a>
           </div>
           <div class="help-card">
             <div class="help-circle">
               <span
                 class="icon-mask"
                 style="
-                  -webkit-mask-image: url('assets/icons/FHB-cards.svg');
-                  mask-image: url('assets/icons/FHB-cards.svg');
+                  -webkit-mask-image: url('{% static 'assets/icons/FHB-cards.svg' %}');
+                  mask-image: url('{% static 'assets/icons/FHB-cards.svg' %}');
                 "
               ></span>
             </div>
-            <a href="#" class="help-link">Credit Cards</a>
+            <a href="#" class="help-link">Payment Cards</a>
           </div>
           <div class="help-card">
             <div class="help-circle">
               <span
                 class="icon-mask"
                 style="
-                  -webkit-mask-image: url('assets/icons/FHB-Treasury-Management-Outline.svg');
-                  mask-image: url('assets/icons/FHB-Treasury-Management-Outline.svg');
+                  -webkit-mask-image: url('{% static 'assets/icons/FHB-Treasury-Management-Outline.svg' %}');
+                  mask-image: url('{% static 'assets/icons/FHB-Treasury-Management-Outline.svg' %}');
                 "
               ></span>
             </div>
-            <a href="#" class="help-link">Investing</a>
+            <a href="#" class="help-link">Capital Growth</a>
           </div>
         </div>
       </div>
@@ -440,7 +440,7 @@
         <div class="featured-grid">
           <article class="featured-card">
             <img
-              src="{% static 'assets/featured/FeaturedHomeLeftPersonal.jpg' %}"
+              src="{% static 'assets/featured/a-woman-holding-coffee.png' %}"
               alt="Family at home"
             />
             <h3>Individual</h3>
@@ -461,7 +461,7 @@
           </article>
           <article class="featured-card">
             <img
-              src="{% static 'assets/featured/Q424FeaturedHomeMiddle.jpg' %}"
+              src="{% static 'assets/featured/upscalemedia-transformed (3) (1).webp' %}"
               alt="Personal financing"
             />
             <h3>Capital Management</h3>
@@ -481,7 +481,7 @@
           </article>
           <article class="featured-card">
             <img
-              src="{% static 'assets/featured/Q424FeaturedHomeMiddle.jpg' %}"
+              src="{% static 'assets/featured/image-5.png' %}"
               alt="Small business meeting"
             />
             <h3>Startup Banking</h3>
@@ -559,7 +559,7 @@
               ></a>
             </div>
             <img
-              src="{% static 'assets/featured/FeaturedHomeLeftPersonal.jpg' %}"
+              src="{% static 'assets/featured/upscalemedia-transformed (4).png' %}"
               alt="Article"
             />
           </article>
@@ -582,7 +582,7 @@
               ></a>
             </div>
             <img
-              src="{% static 'assets/featured/Q424FeaturedHomeMiddle.jpg' %}"
+              src="{% static 'assets/featured/blog-2.png' %}"
               alt="Article"
             />
           </article>
@@ -603,7 +603,7 @@
               ></a>
             </div>
             <img
-              src="{% static 'assets/featured/FeaturedHomeLeftPersonal.jpg' %}"
+              src="{% static 'assets/featured/upscalemedia-transformed (6).png' %}"
               alt="Article"
             />
           </article>
@@ -624,7 +624,7 @@
               ></a>
             </div>
             <img
-              src="{% static 'assets/featured/Q424FeaturedHomeMiddle.jpg' %}"
+              src="{% static 'assets/featured/upscalemedia-transformed (5).png' %}"
               alt="Article"
             />
           </article>
@@ -637,7 +637,7 @@
         <div class="impact-images">
           <img
             class="impact-img main"
-            src="{% static 'assets/featured/Q424FeaturedHomeMiddle.jpg' %}"
+            src="{% static 'assets/featured/upscalemedia-transformed (7).png' %}"
             alt="Community"
           />
         </div>
@@ -662,8 +662,8 @@
             <span
               class="finder-icon"
               style="
-                -webkit-mask-image: url('assets/icons/FHB-Check-and-pen.svg');
-                mask-image: url('assets/icons/FHB-Check-and-pen.svg');
+                -webkit-mask-image: url('{% static 'assets/icons/FHB-Check-and-pen.svg' %}');
+                mask-image: url('{% static 'assets/icons/FHB-Check-and-pen.svg' %}');
               "
             ></span>
           </a>
@@ -672,8 +672,8 @@
             <span
               class="finder-icon"
               style="
-                -webkit-mask-image: url('assets/icons/FHB-Dollar-bill.svg');
-                mask-image: url('assets/icons/FHB-Dollar-bill.svg');
+                -webkit-mask-image: url('{% static 'assets/icons/FHB-Dollar-bill.svg' %}');
+                mask-image: url('{% static 'assets/icons/FHB-Dollar-bill.svg' %}');
               "
             ></span>
           </a>
@@ -682,8 +682,8 @@
             <span
               class="finder-icon"
               style="
-                -webkit-mask-image: url('assets/icons/FHB-Handshake.svg');
-                mask-image: url('assets/icons/FHB-Handshake.svg');
+                -webkit-mask-image: url('{% static 'assets/icons/FHB-Handshake.svg' %}');
+                mask-image: url('{% static 'assets/icons/FHB-Handshake.svg' %}');
               "
             ></span>
           </a>
@@ -692,8 +692,8 @@
             <span
               class="finder-icon"
               style="
-                -webkit-mask-image: url('assets/icons/FHB-Hand-Holding-Money-Bag.svg');
-                mask-image: url('assets/icons/FHB-Hand-Holding-Money-Bag.svg');
+                -webkit-mask-image: url('{% static 'assets/icons/FHB-Hand-Holding-Money-Bag.svg' %}');
+                mask-image: url('{% static 'assets/icons/FHB-Hand-Holding-Money-Bag.svg' %}');
               "
             ></span>
           </a>
@@ -705,7 +705,7 @@
       <div class="container-md footer-top">
         <div class="footer-grid-4" role="navigation" aria-label="Footer">
           <div class="footer-brand">
-            <p>Logo here</p>
+            <p>Metro Global Trust Bank</p>
           </div>
           <div class="footer-col">
             <button class="footer-accordion" aria-expanded="false">
@@ -995,22 +995,22 @@
         // Slides data
         const slidesData = [
           {
-            img: "assets/testimonials/HmpgBrandImage.jpg",
+            img: "{% static 'assets/testimonials/slider-9.png' %}",
             quote:
               "Because big bank resources should be guided by deep relationships and personalized service.",
           },
           {
-            img: "assets/testimonials/Mack-Wilbourn.png",
+            img: "{% static 'assets/testimonials/gghsiala.png' %}",
             quote:
               "It’s a new chapter, and I want to do things that I’m passionate about for my community.",
           },
           {
-            img: "assets/testimonials/HmpgBrandImage.jpg",
+            img: "{% static 'assets/testimonials/slider-9.png' %}",
             quote:
               "Because big bank resources should be guided by deep relationships and personalized service.",
           },
           {
-            img: "assets/testimonials/Mack-Wilbourn.png",
+            img: "{% static 'assets/testimonials/gghsiala.png' %}",
             quote:
               "It’s a new chapter, and I want to do things that I’m passionate about for my community.",
           },
